# nix-hug

./: .gitignore  LICENSE.md  README.md  base64.nix  cli.md  design.md  flake.nix  glossary.md  implementation.md  lib.nix  pyproject.toml  result
.claude/: settings.local.json
.github/workflows/: ci.yml  test.yml
cli/: completion.bash  completion.fish  completion.zsh  nix-hug
cli/lib/: commands.sh  common.sh  hash.sh  nix-expr.sh  persist.sh  ui.sh
example/: direct-usage.nix  flake.nix
lib/: core.nix  default.nix  filters.nix  utils.nix
nix_hug/: HugLock.py  __init__.py  __main__.py  builder.py  cli.py  cli_utils.py  config.py  shared.py  types.py  utils.py
template/: README.md  flake.nix
test/: flake.nix
tests/: base64.nix
